--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "@reduxjs/toolkit": "^1.9.1",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
