--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "@react-pdf/renderer": "^3.0.2",
     "@reduxjs/toolkit": "^1.9.1",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
@@ -22,7 +23,7 @@
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
     "react-resizable": "^3.0.4",
-    "uuidv4": "^6.2.13"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "jshint": "^2.13.6",
